Projeto/Compilador/tests/cases/error/T19.pas
program T19;
var r: real;
begin
  r := 5.0 mod 2;
end.
